--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ quarkusPluginVersion=3.7.1
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.7.1
+
+projectRootPackage=com.github.anlac96.account.opening.service
