--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
 
     implementation files("$rootDir/api-spec/account-opening-service-api-0.9.0.jar")
 
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
